--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ We are borrowing this template for use with the capstone program
 
 <html lang="en">
 <head>
-  <title>STUDENT STUDENTSON</title> <!-- EDIT YOUR NAME HERE -->
+  <title>Yunge(Healy) Li</title> <!-- EDIT YOUR NAME HERE -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -64,19 +64,19 @@ We are borrowing this template for use with the capstone program
 					<p>The goal is to give potential employers some idea of who you are (to convince them that you are skilled, professional, and personable!) 
 					-->
 			
-			                <p> I'm a Master's Student in Biostatistics at the University of Washington. I have a Bachelor's degree in mathematics from Pomona College. My past experiences include an internship at Genentech where I developed and employed methodology for differential gene expression testing using paraffin embedded tissue; as well as a collaborative experience with the <a href="https://www.cff.org/researchers/therapeutics-development-network"> Therapeutics Development Network </a> supporting the design of randomized interventional trials for cystic fibrosis. </p>
+			                <p> I'm a Master's Student in Biostatistics at the University of Washington. I have a Bachelor's degree in statistics from Ohio State University. My past experiences include an internship at Genentech where I developed and employed methodology for differential gene expression testing using paraffin embedded tissue; as well as a collaborative experience with the <a href="https://www.cff.org/researchers/therapeutics-development-network"> Therapeutics Development Network </a> supporting the design of randomized interventional trials for cystic fibrosis. </p>
 					
 					<p> I am broadly interested in Biostatistics and Data Science, and enjoy the process of engaging domain science, statistical models and programmatic data analysis. </p>
 			
-					<p> For more information about me, please check out my <a href="resume.pdf">resume</a>, or reach out via email or <a href="https://www.linkedin.com/in/noah-simon-04bb83bb">linkedin</a>.
+					<p> For more information about me, please check out my <a href="resume.pdf">resume</a>, or reach out via email or <a href="https://www.linkedin.com/in/yunge-li-315287249/">linkedin</a>.
 					
                 </div>
             </div> 
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Student Studentson</b></div><br>
-                <p><b>email-account@uw.edu</b><br>
+                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Yunge(Healy) Li</b></div><br>
+                <p><b>healy@uw.edu</b><br>
                 <p>Biostatistics Master's Student<br>
 		<p> University of Washington <br>
                 </p>
