--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ We are borrowing this template for use with the capstone program
 					<p>The goal is to give potential employers some idea of who you are (to convince them that you are skilled, professional, and personable!) 
 					-->
 			
-			                <p> I'm a Master's Student in Biostatistics at the University of Washington. I have a Bachelor's degree in statistics from Ohio State University. My past experiences include an internship at Genentech where I developed and employed methodology for differential gene expression testing using paraffin embedded tissue; as well as a collaborative experience with the <a href="https://www.cff.org/researchers/therapeutics-development-network"> Therapeutics Development Network </a> supporting the design of randomized interventional trials for cystic fibrosis. </p>
+			                <p> I completed my bachelor’s degree of statistics at Ohio State University, and I am currently a master’s student in biostatistics at University of Washington. I individually completed multiple self-interested projects including investigating the effect of Covid-19 on movie’s box office and predict incident of lung cancer by using statistical models. My past experiences also include participating in student organizations where I corporate with other members in holding school events and help the advertising process. </p>
 					
-					<p> I am broadly interested in Biostatistics and Data Science, and enjoy the process of engaging domain science, statistical models and programmatic data analysis. </p>
+					<p> I am interested in Biostatistics and more specifically, in statistical genes, which is the track I plan to choose in the second year of the program. I also enjoy the process of investigating the complex association among different variables in data using the programmatic data analysis skills. </p>
 			
-					<p> For more information about me, please check out my <a href="resume.pdf">resume</a>, or reach out via email or <a href="https://www.linkedin.com/in/yunge-li-315287249/">linkedin</a>.
+					<p> For more information about me, please check out my <a href="resume.pdf">resume</a>, or reach out via my email or <a href="https://www.linkedin.com/in/yunge-li-315287249/">linkedin</a>.
 					
                 </div>
             </div> 
