--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ We are borrowing this template for use with the capstone program
 					<p>The goal is to give potential employers some idea of who you are (to convince them that you are skilled, professional, and personable!) 
 					-->
 			
-			                <p> I completed my bachelor’s degree of statistics at Ohio State University, and I am currently a master’s student in biostatistics at University of Washington. I individually completed multiple self-interested projects including investigating the effect of Covid-19 on movie’s box office and predict incident of lung cancer by using statistical models. My past experiences also include participating in student organizations where I corporate with other members in holding school events and help the advertising process. </p>
+			                <p> I am a master’s student in biostatistics at University of Washington, and my bachelor’s degree in statistics is completed in Ohio State University. I individually completed multiple self-interested projects including investigating the effect of Covid-19 on movie’s box office and predict incident of lung cancer by using statistical models. My past experiences also include participating in student organizations where I corporate with other members in holding school events and help the advertising process. </p>
 					
 					<p> I am interested in Biostatistics and more specifically, in statistical genes, which is the track I plan to choose in the second year of the program. I also enjoy the process of investigating the complex association among different variables in data using the programmatic data analysis skills. </p>
 			
@@ -91,17 +91,17 @@ We are borrowing this template for use with the capstone program
 		
 		            <!-- Projects -->
             <div class="col-md-8" style="height: 100vh;">    
-                <h2 id="projects">Projects</h2>
-		<strong>Differential expression analysis with paraffin embedded (FFPE) tissue</strong><br>
+                <h2 id="projects">Individual Projects</h2>
+		<strong>Analyzing effect of covid-19 on movie’s box office </strong><br>
                 <ul>
-                <li> Developed methods and software (in R) to calculate gene expression from probe-level microarray data using FFPE tissue samples. </li>
-		<li> Collaborated with biomarker scientists and employed this method/software to identify differentially expressed genes in breast tumor tissue (as compared to healthy control tissue).</li>
+                <li> <a href = "https://github.com/Healylyg/project/tree/main/WBO">Collect and organize movie’s information and their corresponding box office data </a></li>
+		<li> Quantify and analyze the effect of covid on different genres of movie by using statistical test and data visualization(in R)</li>
 		</ul>
-		<strong>Comparison of Machine Learning (ML) Methods for Survival Data</strong><br>
-                <ul>
-                <li> Developed a simulation study to compare ML methods for predicting survival outcome. </li>
-		<li> Wrote parallelized code (and deployed on AWS EC2) to efficiently run simulation study.</li>
+		<strong><a href = "https://github.com/Healylyg/project/tree/main/Lung%20Cancer%20Model">Prediction of lung cancer</a></strong><br>
+                <ul> Investigate different predictors that are potentially associated with the incident of cancer using data visualization</li>
+		<li> Fitting and compare different statistical models on the data that can accurately predict incident of lung cancer </li>
 		</ul>
+		<h2 id="projects">Course Projects</h2>
 		<strong><a href = "https://github.com/nrs02004/Jiujitsu-ELO">Ranking Models for Jiujitsu Competitors</a></strong><br>
                 <ul>
                 <li> Developed R/C++ code for efficiently fitting penalized conditional logistic regression. </li>
