--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@ We are borrowing this template for use with the capstone program
 		            <!-- Projects -->
             <div class="col-md-8" style="height: 100vh;">    
                 <h2 id="projects">Individual Projects</h2>
-		<strong>Analyzing effect of covid-19 on movie’s box office </strong><br>
+		<strong><a href = "https://github.com/Healylyg/project/tree/main/WBO">Analyzing effect of covid-19 on movie’s box office </a></strong><br>
                 <ul>
-                <li> <a href = "https://github.com/Healylyg/project/tree/main/WBO">Collect and organize movie’s information and their corresponding box office data </a></li>
+                <li> Collect and organize movie’s information and their corresponding box office data </li>
 		<li> Quantify and analyze the effect of covid on different genres of movie by using statistical test and data visualization(in R)</li>
 		</ul>
 		<strong><a href = "https://github.com/Healylyg/project/tree/main/Lung%20Cancer%20Model">Prediction of lung cancer</a></strong><br>
@@ -102,13 +102,14 @@ We are borrowing this template for use with the capstone program
 		<li> Fitting and compare different statistical models on the data that can accurately predict incident of lung cancer </li>
 		</ul>
 		<h2 id="projects">Course Projects</h2>
-		<strong><a href = "https://github.com/nrs02004/Jiujitsu-ELO">Ranking Models for Jiujitsu Competitors</a></strong><br>
+		<strong><a href = "https://github.com/Healylyg/project/tree/main/BirthWeight%20Project">Effect of “First Step” on newborns’ birthweight</a></strong><br>
                 <ul>
-                <li> Developed R/C++ code for efficiently fitting penalized conditional logistic regression. </li>
-		<li> Applied this to a novel dataset with ~2.5k competitors and ~8k matches to identify top competitors.</li>
-		<li> Empirically explored the impact of tuning parameter selection in this problem. </li>
+                <li> Analyzed the efficacy of the program “First Step” on birth weight of the newborns from mother with low income by using t-test and data visualization </li>
 		</ul>
-		    
+		<strong><a href = "https://github.com/Healylyg/project/tree/main/SalesPredict">Prediction of Monthly Retail Sales in USA</a></strong><br>
+                <ul>
+                <li> Predicted monthly sales of retail trades and food services by fitting and comparing different time series model (ARMA & SARIMA)</li>
+		</ul>    
 
             </div>
 
