--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@ We are borrowing this template for use with the capstone program
 		<li> Quantify and analyze the effect of covid on different genres of movie by using statistical test and data visualization(in R)</li>
 		</ul>
 		<strong><a href = "https://github.com/Healylyg/project/tree/main/Lung%20Cancer%20Model">Prediction of lung cancer</a></strong><br>
-                <ul> Investigate different predictors that are potentially associated with the incident of cancer using data visualization</li>
+		<ul>
+                <li> Investigate different predictors that are potentially associated with the incident of cancer using data visualization</li>
 		<li> Fitting and compare different statistical models on the data that can accurately predict incident of lung cancer </li>
 		</ul>
 		<h2 id="projects">Course Projects</h2>
