--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ We are borrowing this template for use with the capstone program
 		  <ul class="nav navbar-nav">
 				  <li><a href="index.html">Home</a></li>
 				  <li><a href="#projects">Projects</a></li> 
-				  <li><a href="resume.pdf">Resume</a></li> 
+				  <li><a href="resume202402.pdf">Resume</a></li> 
 		  </ul>
 		</div>
 	  </div>
@@ -64,11 +64,9 @@ We are borrowing this template for use with the capstone program
 					<p>The goal is to give potential employers some idea of who you are (to convince them that you are skilled, professional, and personable!) 
 					-->
 			
-			                <p> I am a master’s student in biostatistics at University of Washington, and my bachelor’s degree in statistics is completed in Ohio State University. I individually completed multiple self-interested projects including investigating the effect of Covid-19 on movie’s box office and predict incident of lung cancer by using statistical models. My past experiences also include participating in student organizations where I corporate with other members in holding school events and help the advertising process. </p>
-					
-					<p> I am interested in Biostatistics and more specifically, in statistical genes, which is the track I plan to choose in the second year of the program. I also enjoy the process of investigating the complex association among different variables in data using the programmatic data analysis skills. </p>
+			                <p> I am currently a second-year Capstone Master's student in Biostatistics at University of Washington and will graduate in March, 2024. I have experience with data analysis and visualization from the internship in Suzhou Abogen Biosciences and currently working on the capstone project about piloting machine learning model on mild cognitive function onset prediction. I am also learning more programming languages including SAS , Python and hope to apply those skills in my future career </p>
 			
-					<p> For more information about me, please check out my <a href="resume.pdf">resume</a>, or reach out via my email or <a href="https://www.linkedin.com/in/yunge-li-315287249/">linkedin</a>.
+					<p> For more information about me, please check out my <a href="resume202402.pdf">resume</a>, or reach out via my email or <a href="https://www.linkedin.com/in/yunge-li-315287249/">linkedin</a>.
 					
                 </div>
             </div> 
@@ -91,21 +89,21 @@ We are borrowing this template for use with the capstone program
 		
 		            <!-- Projects -->
             <div class="col-md-8" style="height: 100vh;">    
-                <h2 id="projects">Individual Projects</h2>
-		<strong><a href = "https://github.com/Healylyg/project/tree/main/WBO">Analyzing effect of covid-19 on movie’s box office </a></strong><br>
+                <h2 id="projects"> Academic Projects</h2>
+		<strong><a href = "https://github.com/Healylyg/project/tree/main/WBO"> Prediction of Mild Cognitive Function in Outpatient Clinic Visits </a></strong><br>
                 <ul>
-                <li> Collect and organize movie’s information and their corresponding box office data </li>
-		<li> Quantify and analyze the effect of covid on different genres of movie by using statistical test and data visualization(in R)</li>
+                <li> Applied machine learning models on Electric Health Record from clinics to predict the onset of mild cognitive function before dementia diagnosis, aims to provide early medical intervention to patients who at high risk of cognitive diseases </li>
+		<li> Generate synthetic data using Generative Adversary Network to improve the quality and quantity of training data, which can help building more accurate and generalized model</li>
 		</ul>
-		<strong><a href = "https://github.com/Healylyg/project/tree/main/Lung%20Cancer%20Model">Prediction of lung cancer</a></strong><br>
+		<strong><a href = "https://github.com/Healylyg/project/tree/main/Lung%20Cancer%20Model"> Prediction of lung cancer </a></strong><br>
 		<ul>
                 <li> Investigate different predictors that are potentially associated with the incident of cancer using data visualization</li>
 		<li> Fitting and compare different statistical models on the data that can accurately predict incident of lung cancer </li>
 		</ul>
 		<h2 id="projects">Course Projects</h2>
-		<strong><a href = "https://github.com/Healylyg/project/tree/main/BirthWeight%20Project">Effect of “First Step” on newborns’ birthweight</a></strong><br>
+		<strong><a href = "https://github.com/Healylyg/project/tree/main/BirthWeight%20Project"> Investigation of Cardiovascular Disease Risk Factors </a></strong><br>
                 <ul>
-                <li> Analyzed the efficacy of the program “First Step” on birth weight of the newborns from mother with low income by using t-test and data visualization </li>
+                <li> Implanted logistic regression and ANOVA test to investigate the incidence of cardiovascular disease and the other 13 variables of interest, indicated that gender could potentially higher associated with heart disease </li>
 		</ul>
 		<strong><a href = "https://github.com/Healylyg/project/tree/main/SalesPredict">Prediction of Monthly Retail Sales in USA</a></strong><br>
                 <ul>
