--- a/index.html
+++ b/index.html
@@ -85,7 +85,28 @@ We are borrowing this template for use with the capstone program
             <div class="col-md-4" style="margin-top:2%">
               <dd><a href="https://www.linkedin.com/in/yunge-li-315287249/">LinkedIn</a></dd>
             </div>
-            
+
+
+	    	            <!-- Work Experience -->
+            <div class="col-md-8" style="height: 100vh;">    
+                <h2 id="projects"> Work Experience </h2>
+		<strong><a href = "https://github.com/Healylyg/project/tree/main/WBO"> Teaching Assistance, Medical Biometry </a></strong><br>
+                <ul>
+                <li> Acted as liaison between students and instructor, supported students with understanding class material </li>
+		<li> Graded homework and exams, prepared and led discussion sessions, hold regular office hours </li>
+		</ul>
+		<strong><a href = "https://github.com/Healylyg/project/tree/main/Lung%20Cancer%20Model"> Biostatistics Intern </a></strong><br>
+		<ul>
+                <li> Developed programming functions with R language to merge repeated clinical records, resulting in higher efficiency of cleaning and organizing clinical data</li>
+		<li> Analyzed clinical trial data using visualization tools and inferential methods in R to evaluate the efficacy of mRNA vaccine, generated statistical tables and charts using SAS, provided QC to support SAP composition </li>
+		</ul>
+		<strong><a> Part-time Tutor </a></strong><br>
+                <ul>
+                <li> Facilitated and tutored 10+ students on Linear Algebra, Linear Statistics models and Probability & Estimation Theory, designed tailored study plans for students, reaulting in a average GPA of 3.8 </li>
+		</ul>
+		   
+
+            </div>
 		
 		            <!-- Projects -->
             <div class="col-md-8" style="height: 100vh;">    
@@ -100,7 +121,6 @@ We are borrowing this template for use with the capstone program
                 <li> Investigate different predictors that are potentially associated with the incident of cancer using data visualization</li>
 		<li> Fitting and compare different statistical models on the data that can accurately predict incident of lung cancer </li>
 		</ul>
-		<h2 id="projects">Course Projects</h2>
 		<strong><a href = "https://github.com/Healylyg/project/tree/main/BirthWeight%20Project"> Investigation of Cardiovascular Disease Risk Factors </a></strong><br>
                 <ul>
                 <li> Implanted logistic regression and ANOVA test to investigate the incidence of cardiovascular disease and the other 13 variables of interest, indicated that gender could potentially higher associated with heart disease </li>
