--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ We are borrowing this template for use with the capstone program
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		  <ul class="nav navbar-nav">
 				  <li><a href="index.html">Home</a></li>
+			          <li><a href="#experience">Experience</a></li>
 				  <li><a href="#projects">Projects</a></li> 
 				  <li><a href="resume202402.pdf">Resume</a></li> 
 		  </ul>
@@ -88,8 +89,8 @@ We are borrowing this template for use with the capstone program
 
 
 	    	            <!-- Work Experience -->
-            <div class="col-md-8" style="height: 60vh;">    
-                <h2 id="projects"> Work Experience </h2>
+            <div class="col-md-8" style="height: 50vh;">    
+                <h2 id="experience"> Work Experience </h2>
 		<strong><a href = "https://github.com/Healylyg/project/tree/main/WBO"> Teaching Assistance, Medical Biometry </a></strong><br>
                 <ul>
                 <li> Acted as liaison between students and instructor, supported students with understanding class material </li>
@@ -109,7 +110,7 @@ We are borrowing this template for use with the capstone program
             </div>
 		
 		            <!-- Projects -->
-            <div class="col-md-8" style="height: 60vh;">    
+            <div class="col-md-8" style="height: 50vh;">    
                 <h2 id="projects"> Academic Projects</h2>
 		<strong><a href = "https://github.com/Healylyg/project/tree/main/WBO"> Prediction of Mild Cognitive Function in Outpatient Clinic Visits </a></strong><br>
                 <ul>
