--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ We are borrowing this template for use with the capstone program
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 30vh;">
+            <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image (UPDATE YOUR OWN PHOTO TO THE REPO!) -->
                 <img class="img-responsive" src="photo.JPG" alt=""><br>
@@ -89,9 +89,9 @@ We are borrowing this template for use with the capstone program
 
 
 	    	            <!-- Work Experience -->
-            <div class="col-md-8" style="height: 30vh;">    
+            <div class="col-md-8" style="height: 40vh;">    
                 <h2 id="experience"> Work Experience </h2>
-		<strong><a href = "https://github.com/Healylyg/project/tree/main/WBO"> Teaching Assistance, Medical Biometry </a></strong><br>
+		<strong> Teaching Assistance, Medical Biometry </strong><br>
                 <ul>
                 <li> Acted as liaison between students and instructor, supported students with understanding class material </li>
 		<li> Graded homework and exams, prepared and led discussion sessions, hold regular office hours </li>
