--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ We are borrowing this template for use with the capstone program
 	    	            <!-- Work Experience -->
             <div class="col-md-8" style="height: 40vh;">    
                 <h2 id="experience"> Work Experience </h2>
-		<strong> Teaching Assistance, Medical Biometry </strong><br>
+		<strong> Teaching Assistance, Medical Biometry </strong><br>             <p>Sept 2023 – Dec 2023<br>
                 <ul>
                 <li> Acted as liaison between students and instructor, supported students with understanding class material </li>
 		<li> Graded homework and exams, prepared and led discussion sessions, hold regular office hours </li>
