--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@ We are borrowing this template for use with the capstone program
 	    	            <!-- Work Experience -->
             <div class="col-md-8" style="height: 40vh;">    
                 <h2 id="experience"> Work Experience </h2>
-		<strong> Teaching Assistance, Medical Biometry </strong><br>             <p>Sept 2023 – Dec 2023<br>
+		<strong> Teaching Assistance, Medical Biometry				Sept 2023 – Dec 2023</strong><br>             <p>University of Washington, Seattle, WA<br>
                 <ul>
                 <li> Acted as liaison between students and instructor, supported students with understanding class material </li>
 		<li> Graded homework and exams, prepared and led discussion sessions, hold regular office hours </li>
 		</ul>
-		<strong><a href = "https://github.com/Healylyg/project/tree/main/Lung%20Cancer%20Model"> Biostatistics Intern </a></strong><br>
+		<strong> Biostatistics Inter						Jun 2023 – Sept 2023 </strong><br>     <p>Abogen Bioscience, Suzhou, Jiangsu<br>
 		<ul>
                 <li> Developed programming functions with R language to merge repeated clinical records, resulting in higher efficiency of cleaning and organizing clinical data</li>
 		<li> Analyzed clinical trial data using visualization tools and inferential methods in R to evaluate the efficacy of mRNA vaccine, generated statistical tables and charts using SAS, provided QC to support SAP composition </li>
