--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@ We are borrowing this template for use with the capstone program
 
 
 	    	            <!-- Work Experience -->
-            <div class="col-md-8" style="height: 40vh;">    
+            <div class="col-md-8" style="height: 50vh;">    
                 <h2 id="experience"> Work Experience </h2>
-		<strong> Teaching Assistance, Medical Biometry				Sept 2023 – Dec 2023</strong><br>             <p>University of Washington, Seattle, WA<br>
+		<strong> Teaching Assistance, Medical Biometry                   Sept 2023 – Dec 2023</strong><br>             <p>University of Washington, Seattle, WA<br>
                 <ul>
                 <li> Acted as liaison between students and instructor, supported students with understanding class material </li>
 		<li> Graded homework and exams, prepared and led discussion sessions, hold regular office hours </li>
 		</ul>
-		<strong> Biostatistics Inter						Jun 2023 – Sept 2023 </strong><br>     <p>Abogen Bioscience, Suzhou, Jiangsu<br>
+		<strong> Biostatistics Intern                               Jun 2023 – Sept 2023 </strong><br>     <p>Abogen Bioscience, Suzhou, Jiangsu<br>
 		<ul>
                 <li> Developed programming functions with R language to merge repeated clinical records, resulting in higher efficiency of cleaning and organizing clinical data</li>
 		<li> Analyzed clinical trial data using visualization tools and inferential methods in R to evaluate the efficacy of mRNA vaccine, generated statistical tables and charts using SAS, provided QC to support SAP composition </li>
 		</ul>
-		<strong><a> Part-time Tutor </a></strong><br>
+		<strong> Part-time Tutor                                    Mar 2022 – present</strong><br>    <p>Abogen Bioscience, Suzhou, Jiangsu<br>
                 <ul>
                 <li> Facilitated and tutored 10+ students on Linear Algebra, Linear Statistics models and Probability & Estimation Theory, designed tailored study plans for students, reaulting in a average GPA of 3.8 </li>
 		</ul>
